Convert line endings to LF

--- a/AdofaiTweaks.Translation/AdofaiTweaks.Translation.csproj
+++ b/AdofaiTweaks.Translation/AdofaiTweaks.Translation.csproj
@@ -35,6 +35,7 @@
     <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <None Include=".editorconfig" />
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
