--- a/AdofaiTweaks/AdofaiTweaks.csproj
+++ b/AdofaiTweaks/AdofaiTweaks.csproj
@@ -166,7 +166,10 @@
     <Compile Include="Tweaks\JudgmentVisuals\JudgmentVisualsPatches.cs" />
     <Compile Include="Tweaks\JudgmentVisuals\JudgmentVisualsSettings.cs" />
     <Compile Include="Tweaks\JudgmentVisuals\JudgmentVisualsTweak.cs" />
-    <Compile Include="Tweaks\KeyLimiter\KeyViewer.cs" />
+    <Compile Include="Tweaks\KeyViewer\KeyViewerPatches.cs" />
+    <Compile Include="Tweaks\KeyViewer\KeyViewerSettings.cs" />
+    <Compile Include="Tweaks\KeyViewer\KeyViewerTweak.cs" />
+    <Compile Include="Tweaks\KeyViewer\KeyViewer.cs" />
     <Compile Include="Tweaks\Miscellaneous\MiscellaneousPatches.cs" />
     <Compile Include="Tweaks\Miscellaneous\MiscellaneousSettings.cs" />
     <Compile Include="Tweaks\Miscellaneous\MiscellaneousTweak.cs" />
