Added TweakPatch, A test function to manually set bpm when starting level, and a function to globally set hitsound volume.

--- a/AdofaiTweaks/AdofaiTweaks.csproj
+++ b/AdofaiTweaks/AdofaiTweaks.csproj
@@ -71,6 +71,7 @@
     <Reference Include="LiteDB, Version=5.0.10.0, Culture=neutral, PublicKeyToken=4ee40123013c9f27, processorArchitecture=MSIL">
       <HintPath>..\packages\LiteDB.5.0.10\lib\net45\LiteDB.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="RDTools">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\A Dance of Fire and Ice\A Dance of Fire and Ice_Data\Managed\RDTools.dll</HintPath>
     </Reference>
@@ -148,14 +149,17 @@
     <Reference Include="UnityModManager">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\A Dance of Fire and Ice\A Dance of Fire and Ice_Data\Managed\UnityModManager\UnityModManager.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdofaiTweaks.cs" />
     <Compile Include="Core\Attributes\SyncTweakSettingsAttribute.cs" />
     <Compile Include="Core\Attributes\RegisterTweakAttribute.cs" />
+    <Compile Include="Core\Attributes\TweakPatchAttribute.cs" />
     <Compile Include="Core\MoreGUILayout.cs" />
     <Compile Include="Core\ShadowedText.cs" />
     <Compile Include="Core\TweakAssets.cs" />
+    <Compile Include="Core\TweakPatch.cs" />
     <Compile Include="Core\TweakRunner.cs" />
     <Compile Include="Core\TweakSettings.cs" />
     <Compile Include="Core\SettingsSynchronizer.cs" />
