--- a/AdofaiTweaks.Translation/AdofaiTweaks.Translation.csproj
+++ b/AdofaiTweaks.Translation/AdofaiTweaks.Translation.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LanguageEnum.cs" />
+    <Compile Include="LanguageEnumExtensions.cs" />
     <Compile Include="TweakString.cs" />
   </ItemGroup>
   <ItemGroup>
