Ignore the one of ruleset to allow Comment+ extension

--- a/AdofaiTweaks/.editorconfig
+++ b/AdofaiTweaks/.editorconfig
@@ -1,3 +1,6 @@
 [*.cs]
 indent_style = space
 end_of_line = crlf
+
+# Default severity for all analyzer diagnostics
+dotnet_analyzer_diagnostic.severity = none
