Add recording mode in HideUiElements Tweak

--- a/AdofaiTweaks/AdofaiTweaks.csproj
+++ b/AdofaiTweaks/AdofaiTweaks.csproj
@@ -153,18 +153,21 @@
     <Compile Include="Core\Attributes\RegisterTweakAttribute.cs" />
     <Compile Include="Core\Attributes\TweakPatchAttribute.cs" />
     <Compile Include="Core\MoreGUILayout.cs" />
+    <Compile Include="Core\TweakKeyShortcut.cs" />
     <Compile Include="Core\ShadowedText.cs" />
     <Compile Include="Core\TweakAssets.cs" />
     <Compile Include="Core\TweakPatch.cs" />
     <Compile Include="Core\TweakRunner.cs" />
     <Compile Include="Core\TweakSettings.cs" />
     <Compile Include="Core\SettingsSynchronizer.cs" />
+    <Compile Include="Core\TweakSettingsProfile.cs" />
     <Compile Include="Core\TweakStringsDb.cs" />
     <Compile Include="Core\TweakStrings.cs" />
     <Compile Include="GlobalSettings.cs" />
     <Compile Include="Tweaks\DisableEffects\DisableEffectsPatches.cs" />
     <Compile Include="Tweaks\DisableEffects\DisableEffectsSettings.cs" />
     <Compile Include="Tweaks\DisableEffects\DisableEffectsTweak.cs" />
+    <Compile Include="Tweaks\HideUiElements\HideUiElementsProfile.cs" />
     <Compile Include="Tweaks\JudgmentVisuals\HitErrorMeter.cs" />
     <Compile Include="Tweaks\JudgmentVisuals\JudgmentVisualsPatches.cs" />
     <Compile Include="Tweaks\JudgmentVisuals\JudgmentVisualsSettings.cs" />
