--- a/AdofaiTweaks.Generator/AdofaiTweaks.Generator.csproj
+++ b/AdofaiTweaks.Generator/AdofaiTweaks.Generator.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Runtime" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
