--- a/AdofaiTweaks/AdofaiTweaks.csproj
+++ b/AdofaiTweaks/AdofaiTweaks.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Core\TweakSettingsProfile.cs" />
     <Compile Include="Core\TweakStringsDb.cs" />
     <Compile Include="Core\TweakStrings.cs" />
+    <Compile Include="GameVersionState.cs" />
     <Compile Include="GlobalSettings.cs" />
     <Compile Include="Tweaks\DisableEffects\DisableEffectsPatches.cs" />
     <Compile Include="Tweaks\DisableEffects\DisableEffectsSettings.cs" />
