--- a/AdofaiTweaks/AdofaiTweaks.csproj
+++ b/AdofaiTweaks/AdofaiTweaks.csproj
@@ -1,47 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{285D8437-6A8E-4ABE-AB99-9936852430F7}</ProjectGuid>
+    <TargetFramework>net8.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AdofaiTweaks</RootNamespace>
-    <AssemblyName>AdofaiTweaks</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
     <LangVersion>latest</LangVersion>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWPF>true</UseWPF>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet>
     <DocumentationFile>
     </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Game|AnyCPU' ">
     <OutputPath>C:\Program Files (x86)\Steam\steamapps\common\A Dance of Fire and Ice\Mods\AdofaiTweaks\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup>
@@ -68,38 +44,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\A Dance of Fire and Ice\A Dance of Fire and Ice_Data\Managed\DOTweenPro.dll</HintPath>
     </Reference>
-    <Reference Include="LiteDB, Version=5.0.10.0, Culture=neutral, PublicKeyToken=4ee40123013c9f27, processorArchitecture=MSIL">
-      <HintPath>..\packages\LiteDB.5.0.10\lib\net45\LiteDB.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationCore" />
     <Reference Include="RDTools">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\A Dance of Fire and Ice\A Dance of Fire and Ice_Data\Managed\RDTools.dll</HintPath>
     </Reference>
     <Reference Include="SkyHook.Unity">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\A Dance of Fire and Ice\A Dance of Fire and Ice_Data\Managed\SkyHook.Unity.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Core" />
-    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Runtime" />
-    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.5.0.0\lib\net45\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
     <Reference Include="Unity.TextMeshPro, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\A Dance of Fire and Ice\A Dance of Fire and Ice_Data\Managed\Unity.TextMeshPro.dll</HintPath>
@@ -148,95 +98,37 @@
     <Reference Include="UnityModManager">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\A Dance of Fire and Ice\A Dance of Fire and Ice_Data\Managed\UnityModManager\UnityModManager.dll</HintPath>
     </Reference>
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdofaiTweaks.cs" />
-    <Compile Include="Core\Attributes\SyncTweakSettingsAttribute.cs" />
-    <Compile Include="Core\Attributes\RegisterTweakAttribute.cs" />
-    <Compile Include="Core\Attributes\TweakPatchAttribute.cs" />
-    <Compile Include="Core\MoreGUILayout.cs" />
-    <Compile Include="Core\TweakKeyShortcut.cs" />
-    <Compile Include="Core\ShadowedText.cs" />
-    <Compile Include="Core\TweakAssets.cs" />
-    <Compile Include="Core\TweakPatch.cs" />
-    <Compile Include="Core\TweakRunner.cs" />
-    <Compile Include="Core\TweakSettings.cs" />
-    <Compile Include="Core\SettingsSynchronizer.cs" />
-    <Compile Include="Core\TweakSettingsProfile.cs" />
-    <Compile Include="Core\TweakStringsDb.cs" />
-    <Compile Include="Core\TweakStrings.cs" />
-    <Compile Include="GameVersionState.cs" />
-    <Compile Include="GlobalSettings.cs" />
-    <Compile Include="Tweaks\DisableEffects\DisableEffectsPatches.cs" />
-    <Compile Include="Tweaks\DisableEffects\DisableEffectsSettings.cs" />
-    <Compile Include="Tweaks\DisableEffects\DisableEffectsTweak.cs" />
-    <Compile Include="Tweaks\HideUiElements\HideUiElementsProfile.cs" />
-    <Compile Include="Tweaks\JudgmentVisuals\HitErrorMeter.cs" />
-    <Compile Include="Tweaks\JudgmentVisuals\JudgmentVisualsPatches.cs" />
-    <Compile Include="Tweaks\JudgmentVisuals\JudgmentVisualsSettings.cs" />
-    <Compile Include="Tweaks\JudgmentVisuals\JudgmentVisualsTweak.cs" />
-    <Compile Include="Tweaks\KeyViewer\KeyViewerPatches.cs" />
-    <Compile Include="Tweaks\KeyViewer\KeyViewerProfile.cs" />
-    <Compile Include="Tweaks\KeyViewer\KeyViewerSettings.cs" />
-    <Compile Include="Tweaks\KeyViewer\KeyViewerTweak.cs" />
-    <Compile Include="Tweaks\KeyViewer\KeyViewer.cs" />
-    <Compile Include="Tweaks\KeyViewer\ReplayInput.cs" />
-    <Compile Include="Tweaks\Miscellaneous\MiscellaneousPatches.cs" />
-    <Compile Include="Tweaks\Miscellaneous\MiscellaneousSettings.cs" />
-    <Compile Include="Tweaks\Miscellaneous\MiscellaneousTweak.cs" />
-    <Compile Include="Tweaks\HideUiElements\HideUiElementsPatches.cs" />
-    <Compile Include="Tweaks\HideUiElements\HideUiElementsSettings.cs" />
-    <Compile Include="Tweaks\HideUiElements\HideUiElementsTweak.cs" />
-    <Compile Include="Tweaks\KeyLimiter\KeyLimiterPatches.cs" />
-    <Compile Include="Tweaks\KeyLimiter\KeyLimiterSettings.cs" />
-    <Compile Include="Tweaks\PlanetColor\ObjectColor.cs" />
-    <Compile Include="Tweaks\PlanetColor\PlanetColorType.cs" />
-    <Compile Include="Tweaks\PlanetColor\PlanetColorPatches.cs" />
-    <Compile Include="Tweaks\PlanetColor\PlanetColorSettings.cs" />
-    <Compile Include="Tweaks\PlanetColor\PlanetColorTweak.cs" />
-    <Compile Include="Tweaks\PlanetOpacity\PlanetOpacityProfile.cs" />
-    <Compile Include="Tweaks\PlanetOpacity\PlanetOpacityPatches.cs" />
-    <Compile Include="Tweaks\KeyLimiter\KeyLimiterTweak.cs" />
-    <Compile Include="Startup.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Core\Tweak.cs" />
-    <Compile Include="Tweaks\PlanetOpacity\PlanetOpacitySettings.cs" />
-    <Compile Include="Tweaks\PlanetOpacity\PlanetOpacityTweak.cs" />
-    <Compile Include="Tweaks\RestrictJudgments\RestrictJudgmentAction.cs" />
-    <Compile Include="Tweaks\RestrictJudgments\RestrictJudgmentsPatches.cs" />
-    <Compile Include="Tweaks\RestrictJudgments\RestrictJudgmentsSettings.cs" />
-    <Compile Include="Tweaks\RestrictJudgments\RestrictJudgmentsTweak.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AdofaiTweaks.Compat.Async\AdofaiTweaks.Compat.Async.csproj">
-      <Project>{6df2eaff-e8b3-4cf5-9df4-7b987faab0af}</Project>
-      <Name>AdofaiTweaks.Compat.Async</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AdofaiTweaks.Generator\AdofaiTweaks.Generator.csproj">
-      <Project>{c3adebac-a8e9-456f-a751-4fd146a728c7}</Project>
-      <Name>AdofaiTweaks.Generator</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AdofaiTweaks.Translation\AdofaiTweaks.Translation.csproj">
-      <Project>{0b6f2259-90fe-495f-aa89-c2406ae1450d}</Project>
-      <Name>AdofaiTweaks.Translation</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\AdofaiTweaks.Compat.Async\AdofaiTweaks.Compat.Async.csproj" />
+    <ProjectReference Include="..\AdofaiTweaks.Generator\AdofaiTweaks.Generator.csproj" />
+    <ProjectReference Include="..\AdofaiTweaks.Translation\AdofaiTweaks.Translation.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <PackageReference Include="LiteDB" Version="5.0.10" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Tweaks\RestrictJudgments\RestrictJudgmentsAction.cs" />
+  </ItemGroup>
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetPath)" "C:\Program Files (x86)\Steam\steamapps\common\A Dance of Fire and Ice\Mods\AdofaiTweaks"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>cd "$(SolutionDir)AdofaiTweaks.Generator\bin\$(ConfigurationName)"
 .\AdofaiTweaks.Generator.exe</PreBuildEvent>
+    <AssemblyTitle>AdofaiTweaks</AssemblyTitle>
+    <Product>AdofaiTweaks</Product>
+    <Copyright>Copyright ©  2021</Copyright>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
   <Target Name="SpicNSpan" AfterTargets="Clean">
     <RemoveDir Directories="$(TargetDir)" />
